--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "bitgo": "1.5.4",
     "body-parser": "^1.15.0",
+    "bootstrap-datepicker": "^1.6.1",
     "cheerio": "^0.20.0",
     "clockwork": "^0.1.0",
     "compression": "^1.6.1",
