--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lob": "^3.9.0",
     "lodash": "^4.11.1",
     "lusca": "^1.3.0",
+    "moment": "^2.13.0",
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
